--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+
+
 .display-1{
     font-weight: bold;
   }
@@ -62,5 +64,7 @@
     h1{
       font-size: 30px;
     }
-  
+   img{
+    border-radius: 5px;
+   }
 }
